Atualizando a header do portifólio

--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -1,6 +1,6 @@
 .banner {
     box-sizing: border-box;
-    background-image: url(../../img/banner.jpg);
+    background-image: url(../../img/banner-animado-10.gif);
     background-repeat: no-repeat;
     height: 800px;
     background-size: 100%;
