--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -4,8 +4,18 @@
     background-repeat: no-repeat;
     height: 800px;
     background-size: 100%;
-    border-bottom: 10px solid black;
     display: flex;
+    position: relative;
+}
+
+.banner::before {
+    content: "";
+    position: absolute;
+    bottom: 14px;
+    left: 0;
+    width: 100%;
+    height: 10px;
+    background-color: rgb(0, 0, 0);
 }
 
 .banner .wrapper {
@@ -24,4 +34,3 @@
     display: flex;
     justify-content: space-around;
 }
-
