--- a/css/components/wrapper-skill.css
+++ b/css/components/wrapper-skill.css
@@ -4,6 +4,9 @@
     max-width: 960px;
     margin-left: auto;
     margin-right: auto;
+    align-items: flex-start; 
+    justify-content: space-between;
+
 }
 
 .wrapper-skill .skills-tec {
@@ -12,7 +15,7 @@
 
 .wrapper-skill .skills-tec:nth-child(odd) {
     margin-right: 100px;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
 .wrapper-skill .progress-bar {
