--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@ a {
     margin-right: 30px;
 }
 
-a::before {
+.menu::before {
     content: "";
     background-color: #EA53AD;
     height: 10px;
