Refatoração do código

--- a/css/components/card-project.css
+++ b/css/components/card-project.css
@@ -4,7 +4,8 @@
     background-color: #7C5E99;
     width: 280px;
     height: 280px;
-    margin-right: 60px;
+    margin: 40px;
+    
     box-shadow: 10px 10px 0px #ffffff;
 }
 
