--- a/css/components/main-section.css
+++ b/css/components/main-section.css
@@ -1,4 +1,4 @@
-.section{
+.main-section{
     background-color:#EA53AD;
     padding-top: 50px;
     padding-bottom: 100px;
@@ -6,14 +6,14 @@
     margin-top: -14px; 
 }
 
-.section .main-title{
+.main-section .main-title{
     margin-bottom: 60px;
 }
 
-.section.-bgBlack {
+.main-section.-bgBlack {
     background-color: black;
 }
 
-.section.-bdFirst{
+.main-section.-bdFirst{
     border-color: #EA53AD;
 }
