--- a/css/main-header.css
+++ b/css/main-header.css
@@ -1,4 +1,4 @@
-header {
+.main-header {
     display: flex;
     justify-content: space-between;
     background-color: #CD9DF3;
@@ -17,7 +17,7 @@ a {
     margin-right: 30px;
 }
 
-.menu::before {
+.main-menu::before {
     content: "";
     background-color: #EA53AD;
     height: 10px;
