--- a/css/components/skills-tec.css
+++ b/css/components/skills-tec.css
@@ -1,18 +1,30 @@
-.skills-tec{
+.skills-tec {
     display: flex;
     align-items: center;
     font-family: 'Press Start 2P', sans-serif;
     font-size: 25px;
     color: floralwhite;
+    margin-bottom: 20px; 
 }
 
-.skills-tec .icon{
-    margin-right: 25px;
-    width: 90px;
+.skills-tec .icon {
+    margin-right: 15px; 
+    width: 60px; 
 }
 
 .skills-tec .right {
-display: flex;
-flex-direction: column;
-justify-content: space-around;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+@media only screen and (max-width: 768px) {
+    .skills-tec {
+        font-size: 20px; /
+    }
+
+    .skills-tec .icon {
+        width: 40px; 
+        margin-right: 10px; 
+    }
 }
