--- a/css/components/card-project.css
+++ b/css/components/card-project.css
@@ -1,14 +1,25 @@
 .card-project {
-    display: flex;
-    justify-content: center;
-    background-color: #7C5E99;
+    position: relative;
     width: 280px;
     height: 280px;
-    margin: 40px;
-    
+    margin: 20px;
     box-shadow: 10px 10px 0px #ffffff;
+    background-color: #7C5E99;
+    overflow: hidden;
+}
+
+.card-project img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .card-project.-blue {
     background-color: #b65e93;
+}
+
+@media only screen and (max-width: 600px) {
+    .card-project {
+        margin: 10px;
+    }
 }
