--- a/css/components/main-button.css
+++ b/css/components/main-button.css
@@ -17,7 +17,7 @@
     background-color: #EA53AD;
     box-shadow: 5px 5px 0 #000000;
     padding: 18px 20px;
-    margin-right: 0;
+    margin-right: 19px;
     cursor: pointer;
     transition: background-color 0.2s;
 }
