--- a/css/components/wrapper-card.css
+++ b/css/components/wrapper-card.css
@@ -1,4 +1,5 @@
-.wrapper-card{
+.wrapper-card {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    flex-wrap: wrap; 
 }
