--- a/css/components/card-project.css
+++ b/css/components/card-project.css
@@ -11,15 +11,20 @@
 .card-project img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .card-project.-blue {
     background-color: #b65e93;
 }
 
-@media only screen and (max-width: 600px) {
+@media (max-width: 932px) {
     .card-project {
         margin: 10px;
+        
+    }
+
+    .img-icons{
+        margin-bottom: 31px;
     }
 }
