--- a/css/components/main-box.css
+++ b/css/components/main-box.css
@@ -4,17 +4,18 @@
     box-shadow: 10px 10px 0 black;
     text-align: center;
     padding: 42px 44px;
-    box-sizing: border-box; 
-    margin: -9px;
+
 }
 
 .main-box h1 {
     margin-bottom: 28px;
 }
 
-@media only screen and (max-width: 768px) {
+@media (max-width: 932px) {
     .main-box {
         width: 100%; 
-        padding: 20px; 
+        padding: 20px;
+        box-sizing: border-box; 
+        margin: -5px;
     }
 }
