--- a/css/components/main-button.css
+++ b/css/components/main-button.css
@@ -1,17 +1,3 @@
-#main-button {
-    display: inline-block;
-    background-color: #EA53AD;
-    box-shadow: 5px 5px 0 #000000;
-    padding: 18px 20px;
-    margin-right: 0;
-    cursor: pointer;
-    transition: background-color 0.2s;
-}
-
-#main-button:hover {
-    background-color: #a32bff;
-}
-
 .main-button {
     display: inline-block;
     background-color: #EA53AD;
@@ -28,5 +14,19 @@
 
 .main-button.-full{
     width: 100%;
+}
+
+@media (max-width: 932px) {
+
+ .main-button{
+    padding: 15px 17px;
+    margin: 15px 19px 0px 0px;
+ }
+
+ .main-button.-full{
+    width: 100%;
+    font-size: 18px;
+}
+
 }
 
