--- a/css/components/progress-bar.css
+++ b/css/components/progress-bar.css
@@ -17,14 +17,15 @@
     background-color: #9000ff;
 }
 
-@media only screen and (max-width: 768px) {
+@media (max-width: 932px) {
     .progress-bar {
         height: 40px;
         border-width: 4px;
-        width: 100%;
+     
     }
 
     .main-section .progress-bar {
         margin-bottom: 20px; 
+
     }
 }
