--- a/css/components/wrapper-skill.css
+++ b/css/components/wrapper-skill.css
@@ -4,7 +4,7 @@
     max-width: 960px;
     margin-left: auto;
     margin-right: auto;
-    align-items: flex-start; 
+    align-items: flex-start;
     justify-content: space-between;
 
 }
@@ -22,6 +22,12 @@
     width: 310px;
 }
 
-.skills-tec .title{
+.skills-tec .title {
     margin-bottom: 10px;
+}
+
+@media (max-width: 932px) {
+    .wrapper-skill .progress-bar {
+        width: 258px;
+    }
 }
