--- a/css/main-header.css
+++ b/css/main-header.css
@@ -36,3 +36,21 @@ nav {
     margin-right: 30px;
 }
 
+@media (max-width: 932px) {
+    .logo {
+    width: 80px;
+    height: 80px;
+    margin-top: 0px;
+    margin-left: 2px;
+}
+
+.main-header {
+    padding: 20px 12px;
+}
+
+a {
+    margin-right: 6px
+}
+
+}
+
